# mUI

./: .gitignore  CMakeLists.txt  ChineseChecker.eap  README.md  license.txt  mai.sln
ChineseChecker_Lib/: CMakeLists.txt
ChineseChecker_Lib/Presenter/: Board.cpp  Board.h  CGame.cpp  CGame.h  Piece.cpp  Piece.h  PieceGroup.cpp  PieceGroup.h  Player.cpp  Player.h  Square.cpp  Square.h
ChineseChecker_Lib/View/: BoardView.cpp  BoardView.h  CGameForm.h  CGameView.cpp  CGameView.h  SquareView.cpp  SquareView.h
ChineseChecker_UnitTest/: BoardTest.cpp  CGameTest.cpp  CMakeLists.txt  PieceGroupTest.cpp  PieceTest.cpp  PlayerTest.cpp  SquareTest.cpp  temp.cpp
ChineseChecker_UnitTest/mocks/: BoardMock.h  CGameMock.h  PieceGroupMock.h  PieceMock.h  SquareMock.h
HGE/: CMakeLists.txt  HGE.vcproj  demo.cpp  graphics.cpp  hge_impl.h  ini.cpp  input.cpp  power.cpp  random.cpp  resource.cpp  sound.cpp  system.cpp  timer.cpp
HGE/BASS/: bass.h
HGE/ZLIB/: crypt.h  deflate.h  inffast.h  inffixed.h  inflate.h  inftrees.h  ioapi.h  trees.h  unzip.h  zconf.h  zconf.in.h  zip.h  zlib.h  zutil.h
HGE/include/: hge.h  hgeanim.h  hgecolor.h  hgedistort.h  hgefont.h  hgegui.h  hgeguictrls.h  hgeparticle.h  hgerect.h  hgeresource.h  hgesprite.h  hgestrings.h  hgevector.h
MineGame_UnitTest/: AbstractSquareTest.cpp  BlankSquareTest.cpp  CMakeLists.txt  MGameTest.cpp  MineFieldTest.cpp  MineSquareTest.cpp  NumberSquareTest.cpp  SquareFactoryTest.cpp
MineGame_UnitTest/mocks/: ISquareMock.h  ISquareViewMock.h  MGameMock.h  MineFieldMock.cpp  MineFieldMock.h  SquareFactoryFake.h  SquareFactoryMock.h  SquareViewMock.h  ViewMock.h
Pal/: BasicType.h  CMakeLists.txt  Event.cpp  Event.h  Export.h  Lock.cpp  Lock.h  Misc.cpp  Misc.h  MuiSal.h  Pal.h  Pal.vcproj  Thread.cpp  Thread.h
UnitTest/: CMakeLists.txt  Random.cpp  String.cpp
mUI/: CMakeLists.txt  dllmain.cpp  mUI.cpp  mUI.h  mUI.vcproj  stdafx.cpp  stdafx.h  targetver.h
mUI/Extra/: Export.h  Extra.h  HgeContext.cpp  HgeContext.h
mUI/System/: BasicType.h  Exception.h  Export.h  IAsyncResult.h  IDisposable.h  Random.cpp  Random.h  String.cpp  String.h  System.cpp  System.h
mUI/System.ComponentModel/: ComponentModel.h  Export.h  ISynchronizeInvoke.h
mUI/System.Drawing/: Brush.cpp  Brush.h  Color.h  Drawing.cpp  Drawing.h  Export.h  Font.cpp  Font.h  Graphics.h  Image.cpp  Image.h  Pen.cpp  Pen.h  Point.h  PointF.cpp  PointF.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  SizeF.cpp  SizeF.h  SolidBrush.cpp  SolidBrush.h  SystemColors.cpp  SystemColors.h  SystemFonts.cpp  SystemFonts.h  TextureBrush.h
mUI/System.Drawing/HGEDrawing/: hgeImage.h  hgeTexture.h
mUI/System.Drawing/Internal/: FTFont.h  Glyph.cpp
mUI/System.Drawing/Internals/: FTFont.cpp  FontImpl.cpp  Glyph.h  hgeGraphics.cpp  hgeGraphics.h  hgeImage.cpp  hgeImage.h  hgeTexture.cpp
mUI/System.Forms/: AnchorStyles.h  Application.cpp  Application.h  Button.cpp  Button.h  ButtonBase.h  ButtonState.cpp  ButtonState.h  CaptionButton.cpp  CaptionButton.h  Control.cpp  Control.h  ControlEventArgs.h  ControlInvoke.cpp  ControlPaint.cpp  ControlPaint.h  Export.h  Form.cpp  Form.h  FormBoarderStyle.h  FormBorderStyle.h  FormManager.cpp  FormManager.h  Forms.h  Frame.h  ImageLayout.h  KeyEventArgs.h  KeyPressEventArgs.h  Keys.h  Label.cpp  Label.h  LayoutEventArgs.h  MouseButtons.h  MouseEventArgs.h  PaintEventArgs.h  PictureBox.cpp  PictureBox.h  SystemInformation.cpp  SystemInformation.h  TextBox.cpp  (+1 more)
mUI/System.Threading/: AutoLock.h  EventWaitHandle.cpp  EventWaitHandle.h  Export.h  GlobalTLS.cpp  GlobalTLS.h  Interlocked.cpp  Interlocked.h  Lock.cpp  Lock.h  Lockable.h  ManualResetEvent.cpp  ManualResetEvent.h  Thread.cpp  Thread.h  ThreadPriority.h  Threading.cpp  Threading.h  WaitHandle.cpp  WaitHandle.h
mUI/System/Delegate/: Delegate.h  DelegateImpl.h  DelegateNoArg.h  DelegateRoot.h  DelegateSpec.h  EventArgs.h  EventHandler.h  Functor.h  FunctorBinder.h  FunctorBinder01.h  FunctorBinder02.h  FunctorBinder10.h  FunctorBinderImpl.h  FunctorImpl.h  FunctorSpec.h  MemberFunctor.h  MemberFunctor02.h  MemberFunctor10.h  MemberFunctorImpl.h
mUI/mUI/: BasicType.h  Export.h  IAsyncResult.h  Random.h  String.cpp  String.h  System.h  mUIBase.h
mUI/mUI/APC/: IAsyncResult.h
mUI/mUI/ComponentModel/: AsyncResult.cpp  AsyncResult.h  ComponentModel.cpp  ComponentModel.h  ISynchronizeInvoke.cpp  ISynchronizeInvoke.h  InvocationEntry.h  InvocationList.cpp  InvocationList.h
mUI/mUI/Delegate/: Delegate.h  DelegateNoArg.h  DelegateRoot.h  DelegateSpec.h  EventArgs.cpp  EventArgs.h  EventHandler.h  Functor.h  FunctorBinder.h  FunctorRoot.h  MemberFunctor00.h  MemberFunctor01.h  MemberFunctor02.h
mUI/mUI/Drawing/: Brush.cpp  Brush.h  Color.cpp  Color.h  Drawing.cpp  Drawing.h  Font.cpp  Font.h  Graphics.h  IFont.cpp  IFont.h  Image.h  Pen.h  Point.cpp  Point.h  PointF.h  Rectangle.cpp  Rectangle.h  Size.h  SizeF.h  SolidBrush.h  SystemColors.h  SystemFonts.cpp  SystemFonts.h  TextureBrush.cpp  TextureBrush.h
mUI/mUI/Drawing/HGEDrawing/: PHGE.h  hgeFont.cpp  hgeFont.h  hgeGraphics.cpp  hgeGraphics.h  hgeImage.cpp  hgeImage.h  hgeTexture.h
mUI/mUI/Drawing/Internal/: FTFont.cpp  FTFont.h  (+4 more)
mUI/mUI/Forms/: Application.cpp  Application.h  Button.cpp  Button.h  ButtonBase.cpp  ButtonBase.h  ButtonState.h  CaptionButton.h  Control.cpp  Control.h  ControlEventArgs.h  ControlInvoke.cpp  ControlPaint.cpp  ControlPaint.h  Form.cpp  Form.h  FormBoarderStyle.h  FormManager.cpp  FormManager.h  Frame.cpp  Frame.h  ImageLayout.h  KeyEventArgs.h  KeyPressEventArgs.h  LayoutEventArgs.h  MouseButtons.cpp  MouseButtons.h  MouseEventArgs.h  PaintEventArgs.h  PictureBox.cpp  PictureBox.h  SystemInformation.cpp  SystemInformation.h  TitleBar.cpp  TitleBar.h
mUI/mUI/PAL/: Pal.cpp  Pal.h
mUI/mUI/Threading/: AutoLock.h  EventWaitHandle.cpp  EventWaitHandle.h  GlobalTLS.cpp  GlobalTLS.h  Interlocked.cpp  Interlocked.h  Lock.cpp  Lock.h  Lockable.cpp  Lockable.h  ManualResetEvent.cpp  ManualResetEvent.h  Thread.cpp  Thread.h  ThreadPriority.h  Threading.cpp  Threading.h  WaitHandle.cpp  WaitHandle.h
(+209 files in other folders)
