CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Mai)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules ${CMAKE_MODULE_PATH})

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/Build)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/Build)

ADD_SUBDIRECTORY(Pal)
ADD_SUBDIRECTORY(HGE)
ADD_SUBDIRECTORY(mUI)
ADD_SUBDIRECTORY(MovingWindow)
ADD_SUBDIRECTORY(VisualSort)
ADD_SUBDIRECTORY(mUI_UnitTest)
ADD_SUBDIRECTORY(MineGame_UnitTest)
ADD_SUBDIRECTORY(MineGame_Lib)
ADD_SUBDIRECTORY(MineGame)
ADD_SUBDIRECTORY(ChineseChecker_UnitTest)
ADD_SUBDIRECTORY(ChineseChecker_Lib)
ADD_SUBDIRECTORY(ChineseChecker)
