CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(TARGET_NAME ChineseChecker_Lib)

SET(DIR_WITH_SRC .
	Presenter
)
	
INCLUDE_DIRECTORIES(. 
	${PROJECT_SOURCE_DIR}/mUI/
	${PROJECT_SOURCE_DIR}/HGE/include)
	
SET(DEPENDENCY_LIBS mUI)
LINK_DIRECTORIES()

SET(SRC_FILES "")
FOREACH(DIR IN LISTS DIR_WITH_SRC)
	
	FILE(GLOB FILE_H ${DIR}/*.h)
	FILE(GLOB FILE_CPP ${DIR}/*.cpp ${DIR}/*.c)
	
	STRING(REPLACE "/" "\\\\" SRCGROUP ${DIR})

	IF (${SRCGROUP} STREQUAL .)
		SOURCE_GROUP("${TARGET_NAME}" FILES ${FILE_H} ${FILE_CPP})
	ELSE (${SRCGROUP} STREQUAL .)
		SOURCE_GROUP("${SRCGROUP}" FILES ${FILE_H} ${FILE_CPP})
	ENDIF()	
	
	SET(SRC_FILES ${SRC_FILES} ${FILE_H} ${FILE_CPP})
ENDFOREACH()

ADD_LIBRARY(${TARGET_NAME} STATIC ${SRC_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${DEPENDENCY_LIBS})
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES LINK_INTERFACE_LIBRARIES "")

