CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(TARGET_NAME MineGame_UnitTest)

SET(DIR_WITH_SRC . mocks)
	
INCLUDE_DIRECTORIES(. 
	${PROJECT_SOURCE_DIR}/dependency/include
	${PROJECT_SOURCE_DIR}/MineGame_Lib
	${PROJECT_SOURCE_DIR}/mUI)

SET(DEPENDENCY_LIBS mUI gtest gtest_main MineGame_Lib gmockd)

LINK_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/dependency/lib/gtest
	${PROJECT_SOURCE_DIR}/dependency/lib/gmock
)

SET(SRC_FILES "")
FOREACH(DIR IN LISTS DIR_WITH_SRC)
	
	FILE(GLOB FILE_H ${DIR}/*.h)
	FILE(GLOB FILE_CPP ${DIR}/*.cpp ${DIR}/*.c)
	
	STRING(REPLACE "/" "\\\\" SRCGROUP ${DIR})

	IF (${SRCGROUP} STREQUAL .)
		SOURCE_GROUP("${TARGET_NAME}" FILES ${FILE_H} ${FILE_CPP})
	ELSE (${SRCGROUP} STREQUAL .)
		SOURCE_GROUP("${SRCGROUP}" FILES ${FILE_H} ${FILE_CPP})
	ENDIF()	
	
	SET(SRC_FILES ${SRC_FILES} ${FILE_H} ${FILE_CPP})
ENDFOREACH()

IF (WIN32)
	ADD_EXECUTABLE(${TARGET_NAME} ${SRC_FILES})
ELSE()
	ADD_EXECUTABLE(${TARGET_NAME} ${SRC_FILES})
ENDIF()

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${DEPENDENCY_LIBS})

FOREACH (LIB IN LISTS IGNORED_LIBS)
	SET_TARGET_PROPERTIES(${TARGET_NAME} 
		PROPERTIES 
		LINK_FLAGS /NODEFAULTLIB:\"${LIB}\")
ENDFOREACH()
